fix(loadscreen fade / overflow) Fixes scroll bar caused by overflow in main screen when loading

--- a/styles/loadscreen.css
+++ b/styles/loadscreen.css
@@ -22,3 +22,6 @@
 .loadscreen.fade {
 	opacity: 0;
 }
+.hidden {
+	display: none;
+}
